--- a/package.json
+++ b/package.json
@@ -7,11 +7,17 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "codemirror": "^5.63.0",
+    "cookie": "^0.4.1",
+    "jscookie": "^1.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.5",
     "next": "latest",
+    "next-auth": "^3.29.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-codemirror2": "^7.2.1",
+    "react-dom": "^17.0.2",
+    "react-syntax-highlighter": "^15.4.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
