--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -62,7 +62,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: app
-          file: app/Dockerfile
+          file: /app/Dockerfile
           platforms: ${{ env.DOCKER_PLATFORMS }}
           push: true
           tags: ${{ steps.docker_meta.outputs.tags }}
