--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -61,7 +61,8 @@ jobs:
       - name: Build
         uses: docker/build-push-action@v2
         with:
-          file: /app/Dockerfile
+          context: app
+          file: app/Dockerfile
           platforms: ${{ env.DOCKER_PLATFORMS }}
           push: true
           tags: ${{ steps.docker_meta.outputs.tags }}
