--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,7 +9,7 @@ on:
 
 env:
   NODE_VERSION: 14.x
-  DOCKER_PLATFORMS: linux/amd64,linux/arm/v7,linux/arm64,linux/arm/v6
+  DOCKER_PLATFORMS: linux/amd64 # ,linux/arm/v7,linux/arm64,linux/arm/v6
   IMAGE_NAME: feluxerich/core
 
 jobs:
@@ -31,7 +31,7 @@ jobs:
         run: npm run lint
 
   docker:
-    # needs: [lint]
+    needs: [lint]
     runs-on: ubuntu-latest
 
     steps:
