--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "^17.0.2",
     "react-codemirror2": "^7.2.1",
     "react-dom": "^17.0.2",
-    "react-syntax-highlighter": "^15.4.4"
+    "react-syntax-highlighter": "^15.4.4",
+    "sharp": "^0.29.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
