--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -4,6 +4,11 @@ on:
   push:
     tags:
       - "v*"
+  workflow_run:
+    workflows:
+      - ci
+    types:
+      - completed
 
 env:
   IMAGE_NAME: feluxerich/core
@@ -12,6 +17,8 @@ env:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
+    if: startsWith(github.ref, 'refs/tags/v')
     
     steps:
       - uses: actions/checkout@v2
