--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-syntax-highlighter": "^15.4.4",
-    "sharp": "^0.29.2"
+    "sharp": "^0.29.2",
+    "ssh2": "^1.5.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
