improved navbar a lot made some breaking changes
Co-authored-by: m2v <m2vi@users.noreply.github.com>

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,12 +2,27 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@components/*": ["components/*"],
-      "@pages/*": ["pages/*"],
-      "@public/*": ["public/*"],
-      "@utils/*": ["utils/*"],
-      "@models/*": ["models/*"],
-      "@styles/*": ["styles/*"],
+      "@components/*": [
+        "components/*"
+      ],
+      "@pages/*": [
+        "pages/*"
+      ],
+      "@public/*": [
+        "public/*"
+      ],
+      "@utils/*": [
+        "utils/*"
+      ],
+      "@models/*": [
+        "models/*"
+      ],
+      "@styles/*": [
+        "styles/*"
+      ],
+      "@config/*": [
+        "config/*"
+      ],
     }
   }
 }
